# LSPTools

./: .gitignore  readme.md  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/assets/: native_init  xposed_init
app/src/main/java/com/test/tools/: AAA.java  HookMain.java  MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
tools/: build.gradle
tools/src/main/: AndroidManifest.xml
tools/src/main/cpp/: CMakeLists.txt  lsp.h
tools/src/main/cpp/jnitrace/: JnitraceForC.cpp  JnitraceForC.h  main.cpp
tools/src/main/cpp/log/: logStack.h
tools/src/main/cpp/pending/: dlfcn_nougat.cpp  hide_api.cpp  hide_api.h  pending_hook.cpp
tools/src/main/cpp/test/: test.cpp
tools/src/main/java/com/tool/classmonitor/: PendingHookHandler.java
tools/src/main/java/com/tool/jnitrace/: JniTrace.java  TraceTest.java
